--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,13 @@ body {
 .wmde-markdown {
   background-color: transparent !important;
 }
+
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  25% { transform: translateX(-10px); }
+  75% { transform: translateX(10px); }
+}
+
+.shake {
+  animation: shake 0.5s cubic-bezier(.36,.07,.19,.97) both;
+}
